--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -1,1 +1,5 @@
 <h1>showing article details</h1>
+
+<h1><%= @article.title %></h1>
+<p><%= @article.description %></p>
+<%= link_to @articles, articles_path %>
