--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -2,4 +2,6 @@
 
 <h1><%= @article.title %></h1>
 <p><%= @article.description %></p>
-<%= link_to @articles, articles_path %>
+<%= link_to 'Edit', edit_article_path(@article) %> |
+<%= link_to 'Delete', article_path(@article), method: :delete, data: { confirm: "Are you sure you want to delete this?" }  %> |
+<%= link_to 'List of Articles', articles_path %>
